Update for newer gradle